# ghcjs-handsontable

./: .gitignore  README.md  build.sh  csv-editor.cabal  ghcjs-handsontable.cabal  stack.yaml  watch.sh
app/: Main.hs
demo/: index.html
src-ghcjs/: Handsontable.hs
src-ghcjs/Handsontable/: Internal.hs  JQuery.hs
src-ghcjs/Handsontable/JQuery/: Internal.hs
