name:                csv-editor
version:             0.1.0.0
synopsis:            Mixing GHC and GHCJS together
description:         Please see README.md
homepage:            http://github.com/adinapoli/csv-editor#readme
license:             BSD3
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
extra-source-files:  src-ghcjs/Handsontable.hs
                     src-ghcjs/Handsontable/Internal.hs
cabal-version:       >=1.10

library
  js-sources: jsbits/handsontable-0.20.1.full.min.js
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-dom
  exposed-modules:
    Lib
    Handsontable
  other-modules:
    Handsontable.Internal

  if impl(ghcjs)
    hs-source-dirs:    src-ghcjs
    cpp-options:       -D__GHCJS__
    build-depends:     ghcjs-base
  default-language:    Haskell2010

executable csv-editor
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , csv-editor
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adinapoli/csv-editor
