name:                ghcjs-handsontable
version:             0.1.0.0
synopsis:            Minimal FFI to the Handsontable library
description:         Please see README.md
homepage:            http://github.com/adinapoli/ghcjs-handsontable#readme
license:             BSD3
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
copyright:           2015 Alfredo Di Napoli
category:            Web
build-type:          Simple
extra-source-files:  src-ghcjs/Handsontable.hs
                     src-ghcjs/Handsontable/Internal.hs
cabal-version:       >=1.10

library
  js-sources: jsbits/handsontable-0.20.1.full.min.js
  hs-source-dirs:    src-ghcjs
  cpp-options:       -DGHCJS_BROWSER
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
  exposed-modules:
    Handsontable
    Handsontable.JQuery
  other-modules:
    Handsontable.Internal
    Handsontable.JQuery.Internal

  if impl(ghcjs)
    build-depends:     ghcjs-base
                     , ghcjs-prim
                     , ghcjs-dom
                     , ghcjs-jquery
  default-language:    Haskell2010

executable ghcjs-handsontable-demo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ghcjs-handsontable
                     , ghcjs-dom
                     , ghcjs-jquery
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adinapoli/ghcjs-handsontable
